Bug 410337. Pass the parent window further down the window creation path so that its screen rect can be saved in nsXULWindow and used to determine what screen to open on in some cases.  r=enndeakin

--HG--
extra : rebase_source : 889687a90625b8bb070ea015b93ffcc28570fb6a